--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "node-api-boilerplate",
+  "name": "fitcal-api-boilerplate",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "git@github.com:dtonys/node-api-boilerplate.git",
+  "repository": "git@github.com:dtonys/fitcal-api.git",
   "author": "dtonys@gmail.com <dtonys@gmail.com>",
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon --delay 2 --watch src --exec babel-node ./src/server.js",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
-    "start": "cross-env NODE_ENV=production forever start --uid node-api --append ./build/server.js",
-    "stop": "forever stop node-api",
+    "start": "cross-env NODE_ENV=production forever start --uid fitcal-api --append ./build/server.js",
+    "stop": "forever stop fitcal-api",
     "lint-js": "eslint -c ./.eslintrc.js ./src",
     "console": "babel-node ./src/console.js",
     "test": "cross-env NODE_ENV=development jest --config ./jest.config.js",
