Email Infrastructure, signup welcome email and verification API

--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "get-port": "^3.2.0",
     "helmet": "^3.9.0",
     "lodash": "^4.17.4",
+    "mjml": "^3.3.5",
     "mongoose": "^5.0.0-rc1",
     "morgan": "^1.9.0",
+    "nodemailer": "^4.4.2",
     "nodemon": "^1.14.11",
     "simple-encryptor": "^1.1.1",
     "webpack": "^3.10.0",
