--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "helmet": "^3.9.0",
     "lodash": "^4.17.4",
     "mjml": "^3.3.5",
-    "mongoose": "^5.0.0-rc1",
+    "mongoose": "5.0.6",
     "morgan": "^1.9.0",
     "nodemailer": "^4.4.2",
     "nodemon": "^1.14.11",
