--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "morgan": "^1.9.0",
     "nodemailer": "^4.4.2",
     "nodemon": "^1.14.11",
+    "parse-domain": "^2.0.0",
     "simple-encryptor": "^1.1.1",
     "webpack": "^3.10.0",
     "webpack-node-externals": "^1.6.0"
