--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "nodemon": "^1.14.11",
     "parse-domain": "^2.0.0",
     "simple-encryptor": "^1.1.1",
+    "stripe": "^5.5.0",
     "webpack": "^3.10.0",
     "webpack-node-externals": "^1.6.0"
   },
