--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "nodemailer": "^4.4.2",
     "nodemon": "^1.14.11",
     "parse-domain": "^2.0.0",
+    "raven": "^2.4.2",
+    "serialize-error": "^2.1.0",
     "simple-encryptor": "^1.1.1",
     "slack-node": "^0.1.8",
     "stripe": "^5.5.0",
